# MediaTools-v2

./: .gitignore  .gitmessage  01_Project_Plan.md  02_AI_Rules.md  03_Context.md  04_Features.md  05_Lessons.md  AGENTS.md  OPTIMIZATION_PLAN.md  README.md  REFACTOR.md  pyproject.toml
.git-hooks/: TEST_HOOK.md  install.ps1  prepare-commit-msg  prepare-commit-msg.ps1
.github/workflows/: ci.yml
docs/: AI_COAUTHOR_SETUP.md  AI_COMMIT_GUIDE.md  DOWNLOADER_USAGE.md  FRONTEND_CLEANUP_REPORT.md  PSD_EDITOR.md  UI_API_CONTRACT.md  UI_COMPAT.md
docs/archive/: 03_Context_2026-06-26_full.md  04_Features_2026-06-26_full.md  2026-06-25_frontend_cleanup_report.md  2026-06-27_runtime_status_gpu_uptime.md  2026-06-27_sub_lang_regex_report.md  2026-06-29_psd_editor_frontend_guide.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  AppLauncher.tsx  AppLayout.tsx  DesktopIcons.tsx  LeftNavbar.test.tsx  LeftNavbar.tsx  LogViewer.test.tsx  LogViewer.tsx  RightPanel.test.tsx  RightPanel.tsx  Window.tsx  api.ts  (+17 more)
scripts/: start.py  verify.py
tests/: test_api_filebrowser.py  test_api_server.py  test_cli.py  test_config.py  test_encode.py  test_errors.py  test_fetch.py  test_fetch_args.py  test_fetch_locks.py  test_fetch_naming.py  test_fetch_parallel.py  test_fetch_resolution.py  test_fetch_security.py  test_fetch_transcode.py  test_ffmpeg.py  test_logging.py  test_paths.py  test_probe.py  test_screenshot.py  test_subtitle.py  test_subtitle_merge.py  test_system_metrics.py
(+129 files in other folders)
